[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhge"
version = "0.1.3"
description = "Neuro-Harmonic Graph Engine — iterative harmonic resonance ML architecture"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "NHGE Project Team, Hekima A. Mwala , Mwala_Learn Team" }
]
keywords = [
  "machine learning", "deep learning", "graph neural network", "harmonic", "NHGE"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# NO LIMITS: Works on any Python 3 version from 3.9 upwards
requires-python = ">=3.9"

dependencies = [
  "torch>=2.0.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "black",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/mwala400/nhge"
Repository = "https://github.com/mwala400/nhge"
Issues = "https://github.com/mwala400/nhge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nhge"]
exclude = ["nhge.venv*", "venv*", "build*", "dist*", "tests*"]

[tool.setuptools.package-data]
nhge = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W"]
ignore = ["E501"]