[build-system]
# Tumeongeza build ili kuhakikisha mchakato wa kutengeneza .whl na .tar.gz ni wa kisasa
requires = ["setuptools>=64.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhge"
dynamic = ["version"]
description = "Neuro-Harmonic Graph Engine — iterative harmonic resonance ML architecture"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Hekima A. Mwala", email = "hekimamwala@example.com" }, # Ni vizuri kuweka email
  { name = "NHGE Project Team & MWALA_LEARN TEAM" }
]
keywords = ["machine-learning", "deep-learning", "graph-neural-network", "harmonic", "nhge", "ai"]

classifiers = [
    "Development Status :: 4 - Beta", # Tumesogea kutoka Alpha kwenda Beta
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
    "twine",
    "build",
]

[project.urls]
Homepage = "https://github.com/mwala400/nhge"
Repository = "https://github.com/mwala400/nhge"
Issues = "https://github.com/mwala400/nhge/issues"
Documentation = "https://github.com/mwala400/nhge#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["nhge"]
exclude = ["nhge.venv*", "venv*", "build*", "dist*", "tests*", "docs*"]

[tool.setuptools.package-data]
nhge = ["py.typed"]

# ====================== SEHEMU MUHIMU YA VERSION ======================
[tool.setuptools_scm]
# 'post-release' inahakikisha kuwa kama huna tag mpya, haiongezi '.dev0' inayozingua PyPI
version_scheme = "post-release" 
# 'no-local-version' inafuta yale mambo ya +g889227830 (commit hash)
local_scheme = "no-local-version"
write_to = "nhge/_version.py"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
# Tumeongeza sheria zaidi (linting) ili kodi iwe safi (cleaner code)
lint.select = ["E", "F", "W", "I"] # 'I' ni kwa ajili ya kupanga imports kiotomatiki
lint.ignore = ["E501"]